--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CalvinR</title>
+    <title class="title">CalvinR</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<h1>Esta es mi pagina profesional</h1>
-<p>El comienzo de mi pagina web</p>
+<h1 class="h1">Esta es mi pagina profesional</h1>
+<p class="p">El comienzo de mi pagina web</p>
 <body>
     
 </body>
