--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title class="title">CalvinR</title>
+    <title class="titulo">CalvinR</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <h1 class="h1">Esta es mi pagina profesional</h1>
