--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <h1 class="h1">Esta es mi pagina profesional</h1>
 <p class="p">El comienzo de mi pagina web</p>
 <body>
-    <p class="p2">Soy un parrafo</p>
+    <p class="p2">Soy un parrafo xd</p>
 </body>
 </html>
