Cambios a la estructura

--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
     <title class="titulo">CalvinR</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<h1 class="h1">Esta es mi pagina profesional</h1>
-<p class="p">El comienzo de mi pagina web</p>
-<body>
-    <p class="p2">Soy un parrafo xd</p>
+<body>   
+    <section>
+        <h1>CalvinR</h1>
+        <p>The beginning of my web page :)</p>
+        <nav>
+            <ul>
+                <li>About me</li>
+                <li>Contact me</li>
+                <li>I like chess</li>
+            </ul>
+        </nav>
+
+    </section>
 </body>
 </html>
