Nuevo archivo, y cambios ligeros.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
                 <li>I like chess</li>
             </ul>
         </nav>
+        <div>
+            <form action="">
+                <label for="name">name </label>
+            <input type="text" name="name" id="name">
+            </form>
+            
+        </div>
+        
+
 
     </section>
 </body>
