--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <label for="name">name </label>
             <input type="text" name="name" id="name">
             </form>
+            <a href="https://chatgpt.com/c/f506c88d-72ce-468c-8232-f6f80ad3ea0a">Mi_amigo_el_GPT</a>
             
         </div>
         
