Nuevos cambios, barra de navegacion en proceso, y nuevos descubrimientos en css

--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
 </head>
 <body>   
     <section>
-        <h1>CalvinR</h1>
-        <p>The beginning of my web page :)</p>
-        <nav>
+        <h1 class="container">CalvinR</h1>
+        <p class="item">The beginning of my web page :)</p>
+        <p class="item">The beginning of my web page :)</p>
+        <p class="item">The beginning of my web page :)</p>
+        <p class="item">The beginning of my web page :)</p>
+        <nav class="nav">
             <ul>
-                <li>About me</li>
-                <li>Contact me</li>
-                <li>I like chess</li>
+                <li class="item2">info</li>
+                <li class="item2">info</li>
+                <li class="item2">info</li>
+                <li class="item2">info</li>
             </ul>
         </nav>
-        <div>
-            <form action="">
+        <div class="div">
+            <form action="" class="form">
                 <label for="name">name </label>
             <input type="text" name="name" id="name">
             </form>
