--- a/pruebas.html
+++ b/pruebas.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="pruebas.css">
     <title>Experimentos</title>
 </head>
 <body>
     <section>
-        <h1>Pruebas en html</h1>
+        <h1 class="Titulo">Pruebas en html</h1>
         <p>Esto es solamente para probar cosas de html</p>
-        <nav>
+        <nav class="container">
             <ul>
-                <li>Soy una lista</li>
-                <li>Soy una lista</li>
-                <li>Soy una lista</li>
+                <li class="item">Soy una lista</li>
+                <li class="item">Soy una lista</li>
+                <li class="item">Soy una lista</li>
             </ul>
         </nav>
         <form action="">
@@ -24,6 +25,23 @@
             <label for="Sheck">Chequea </label>
             <input type="checkbox" name="Chequea" id="Sheck">
         </form>
+        <div class="div1">
+            <p>Parrafo de pruebas UwU</p>
+            <ul>
+                <li>soy una lista</li>
+                <li>soy una lista</li>
+            </ul>
+            <p>Parrafo de pruebas UwU</p>
+            <p>Parrafo de pruebas UwU</p>
+            <p>Parrafo de pruebas UwU</p>
+        </div>
+        <div class="div3">
+            <p>soy un div</p>
+            <ul>
+                <li>soy una lista</li>
+            </ul>
+        </div>
+       
     </section>
     
 </body>
