--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>   
+    <main>
     <section>
         <h1 class="container">CalvinR</h1>
         <p class="item">The beginning of my web page :)</p>
@@ -33,5 +34,6 @@
 
 
     </section>
+</main>
 </body>
 </html>
