--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <main>
     <section>
         <h1 class="container">CalvinR</h1>
-        <p class="item">The beginning of my web page :)</p>
-        <p class="item">The beginning of my web page :)</p>
-        <p class="item">The beginning of my web page :)</p>
-        <p class="item">The beginning of my web page :)</p>
+        <h3>SrBlade
+        </h3>
+        ul
+        
         <nav class="nav">
             <ul>
                 <li class="item2">info</li>
-                <li class="item2">info</li>
-                <li class="item2">info</li>
-                <li class="item2">info</li>
+                <li class="item2">Contacto</li>
+                <li class="item2">Portafolio</li>
+                <li class="item2">CV</li>
             </ul>
         </nav>
         <div class="div">
@@ -35,5 +35,8 @@
 
     </section>
 </main>
+<footer class="footer">
+    Hecho por CalvinR_BobadillaF
+</footer>
 </body>
 </html>
